--- a/language/EN.json
+++ b/language/EN.json
@@ -185,8 +185,8 @@
             "SONG_DESC": "Uploads the song you wrote.",
             "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song eminem - rap god```",
             "NO_RESULT": "*I couldn't find anything :(*",
-            "DOWNLOADING_SONG": "\n*Wait Karo Njan Athiyam Song Nokkate💝*\n",
-            "UPLOADING_SONG": "\n*Inna Ni Paranje Sadanam Headphone Vecho Poli an😍*\n",
+            "DOWNLOADING_SONG": "*Downloading your song...*",
+            "UPLOADING_SONG": "*Uploading your song...*",
             "VIDEO_DESC": "Downloads video from YouTube.",
             "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
             "DOWNLOADING_VIDEO": "*Wait Chey Ippo Varum*",
